# SQLQUERYBOX.AI

./: .gitignore  CLI_INTERFACES_GUIDE.md  DEVELOPMENT_GUIDE.md  GEMINI_SETUP_GUIDE.md  IMPROVEMENTS_SUMMARY.md  README.md  SETUP_GUIDE.md  SETUP_INSTRUCTIONS.md  TESTING_SUMMARY.md  check_statuses.py  config.py  env.example  launch_cli.py  my_database_schema.sql  package-lock.json  package.json  setup_my_database.py  shared_components.py  start_backend.py  start_backend_simple.py  start_both.py  start_frontend.py  test_available_data.py  test_backend.py  test_database.py  test_integration.py  test_specific_query.py  webpack.config.js
backend/: app.py
lectures/week_10/: requirements.txt
lectures/week_10/SQLAgent/: .gitignore  MY_DATABASE_GUIDE.md  base_cli.py  pyproject.toml  test_database.py
lectures/week_10/SQLAgent/scripts/: 01_simple_agent.py  02_risky_delete_demo.py  03_guardrailed_agent.py  04_complex_queries.py
lectures/week_10/SQLAgent/tests/: test_config.py  test_shared_components.py
public/: index.html
scripts/: 00_simple_llm.py  00_simple_llm_cli.py  01_simple_agent_cli.py  02_risky_delete_demo_cli.py  03_guardrailed_agent_cli.py  04_complex_queries_cli.py
src/: App.js  index.css
src/components/: GraphicalResponse.js  PromptInput.js  TextResponse.js
tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run_tests.py  setup_test_environment.py
tests/integration/: __init__.py  test_api_integration.py  test_sql_agent_integration.py
tests/unit/: __init__.py  test_backend.py  test_frontend.py  test_sql_agent.py  test_utilities.py
